--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 # DataSource
+## 							タイムゾーンは不要？　「?serverTimezone=JST」
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_database
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-## spring.datasource.sql-script-encoding=UTF-8
-## spring.datasource.initialize=true
+spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.initialize=true
 
+# TODO
 # message
-## spring.messages.basename=i18n/messages,i18n/ValidationMessages
+spring.messages.basename=i18n/messages,i18n/ValidationMessages
 
 # MyBatis
+mybatis.mapper-locations==classpath*:/mapper/mysql/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.domain.user.model
 
 # Log Level
-## logging.level.com.example=debug
+logging.level.com.example=debug
