--- a/EmployeeManagement/build.gradle
+++ b/EmployeeManagement/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	implementation 'org.modelmapper.extensions:modelmapper-spring:2.3.9'
 	implementation 'org.apache.commons:commons-dbcp2'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
 tasks.named('test') {
