--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.messages.basename=i18n/messages,i18n/ValidationMessages
 # MyBatis
 mybatis.mapper-locations=classpath*:/mapper/mysql/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+## MEMO:戻り値の型をModelで指定できるようになる
 mybatis.type-aliases-package=com.example.domain.user.model
 
 # Log Level
